--- a/src/sample/fxml/GameWindow.fxml
+++ b/src/sample/fxml/GameWindow.fxml
@@ -1,10 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="pane" prefHeight="434.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Game">
+<AnchorPane id="pane2" prefHeight="486.0" prefWidth="772.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Game">
    <children>
-      <Label layoutX="332.0" layoutY="209.0" text="GAME" />
+      <GridPane layoutX="4.0" layoutY="22.0" prefHeight="300.0" prefWidth="300.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="0" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.columnIndex="9" />
+            <!--
+            <Button id="button" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="4" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="7" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="8" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="9" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            
+            -->
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
