--- a/src/sample/fxml/SetShipsOnBoardWindow.fxml
+++ b/src/sample/fxml/SetShipsOnBoardWindow.fxml
@@ -1,14 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane id="pane2" prefHeight="457.0" prefWidth="710.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SetShipsOnBoardWindowController">
+   <children>
 
+      <GridPane gridLinesVisible="true" layoutX="205.0" layoutY="148.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="148.0" AnchorPane.leftAnchor="205.0" AnchorPane.rightAnchor="205.0" AnchorPane.topAnchor="100.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="30.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+
+         </rowConstraints>
+         <children>
+            <Button id="button" fx:id="but00" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="0" />
+            <Button id="button" fx:id="but01" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="1" />
+            <Button id="button" fx:id="but02" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="2" />
+            <Button id="button" fx:id="but03" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="3" />
+            <Button id="button" fx:id="but04" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="4" />
+            <Button id="button" fx:id="but05" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="5" />
+            <Button id="button" fx:id="but06" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="6" />
+            <Button id="button" fx:id="but07" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="7" />
+            <Button id="button" fx:id="but08" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="8" />
+            <Button id="button" fx:id="but09" mnemonicParsing="false" prefHeight="29.0" prefWidth="30.0" GridPane.columnIndex="9" />
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="1" />
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="2" />
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="3" />
+
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="4" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="5" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="6" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="6" />
+
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="7" />
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="8" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+
+
+
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="8" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="9" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.rowIndex="9" />
+            <Button id="button" mnemonicParsing="false" prefHeight="28.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
+         </children>
+      </GridPane>
+
+      <HBox layoutX="213.0" layoutY="418.0" prefHeight="65.0" prefWidth="285.0" spacing="10.0">
+         <children>
+            <Button id="button" fx:id="StartButton" mnemonicParsing="false" onAction="#startButtonPressed" prefHeight="102.0" prefWidth="113.0" text="Start" />
+            <Button fx:id="resetButton" mnemonicParsing="false" onAction="#resetButtonPressed" prefHeight="102.0" prefWidth="113.0" text="Reset">
+            </Button>
+            <Button fx:id="AutoButton" mnemonicParsing="false" onAction="#autoButtonPressed" prefHeight="72.0" prefWidth="113.0" text="Auto" />
+         </children>
+      </HBox>
+      <HBox layoutX="402.0" layoutY="65.0" prefHeight="25.0" prefWidth="103.0">
+         <children>
+            <ToggleButton fx:id="toggle_easy" mnemonicParsing="false" onAction="#easypressed" prefHeight="25.0" prefWidth="56.0" text="Łatwy" />
+            <ToggleButton fx:id="toggle_hard" mnemonicParsing="false" onAction="#hardpressed" prefHeight="25.0" prefWidth="58.0" text="Trudny" />
+         </children>
+      </HBox>
+      <HBox layoutX="205.0" layoutY="65.0" prefHeight="25.0" prefWidth="168.0">
+         <children>
+            <ToggleButton fx:id="toggle_easy1" mnemonicParsing="false" onAction="#easypressed" prefHeight="25.0" prefWidth="100.0" text="Poziomo" />
+            <ToggleButton fx:id="toggle_hard1" mnemonicParsing="false" onAction="#hardpressed" prefHeight="26.0" prefWidth="99.0" text="Pionowo" />
+         </children>
+      </HBox>
+   </children>
 </AnchorPane>
