--- a/src/sample/fxml/sample.fxml
+++ b/src/sample/fxml/sample.fxml
@@ -23,7 +23,7 @@
                </font>
             </Label>
       <TextField layoutX="91.0" layoutY="270.0" />
-      <Label fx:id="nickname" layoutX="100.0" layoutY="250.0" text="Nazwa użytkownika" textFill="#fffdfd">
+      <Label fx:id="nickname" layoutX="100.0" layoutY="250.0" text="Nazwa użytkownika" textFill="#eeeeee">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
