--- a/src/sample/fxml/GameWindow.fxml
+++ b/src/sample/fxml/GameWindow.fxml
@@ -8,8 +8,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-
 <AnchorPane id="pane2" prefHeight="596.0" prefWidth="952.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GameController">
 
    <children>
@@ -287,8 +285,13 @@
             <Font name="System Bold Italic" size="18.0" />
          </font></Label>
 
-      <Label layoutX="237.0" layoutY="83.0" text="Moves:" />
-      <Label id="move_lab" fx:id="move_lab" layoutX="289.0" layoutY="83.0" text="0" />
+      <Label layoutX="531.0" layoutY="82.0" text="Moves:" />
+      <Label id="move_lab" fx:id="move_lab" layoutX="595.0" layoutY="82.0" prefHeight="17.0" prefWidth="234.0" text="0" />
+      <Label id="player_name_lab" fx:id="player_name_lab" layoutX="531.0" layoutY="24.0" text="Label">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
 
    </children>
 </AnchorPane>
